@@ -8,34 +8,15 @@ use warnings;
 
 use File::Slurp; # For read_file().
 use File::Spec;
-
 use GraphViz2;
 use GraphViz2::Parse::RecDescent;
-
-use Log::Handler;
-
 use Parse::RecDescent;
-
-# ------------------------------------------------
-
-my($logger) = Log::Handler -> new;
-
-$logger -> add
-	(
-	 screen =>
-	 {
-		 maxlevel       => 'debug',
-		 message_layout => '%m',
-		 minlevel       => 'error',
-	 }
-	);
 
 my($graph) = GraphViz2 -> new
 	(
 	 edge   => {color => 'grey'},
 	 global => {directed => 1},
 	 graph  => {rankdir => 'TB'},
-	 logger => $logger,
 	 node   => {color => 'blue', shape => 'oval'},
 	);
 my($g)      = GraphViz2::Parse::RecDescent -> new(graph => $graph);
