@@ -1,3 +1,5 @@
+- zap pointless logger attribute
+
 2.50 2020-10-04
 - fix test to not need File::Slurp
 
